src/css/homepage.css
@font-face {
    font-family: miso-bold;
    src: url(../fonts/miso-bold/miso-bold-webfont.eot);
    src: url(../fonts/miso-bold/miso-bold-webfont.eot?#iefix) format('embedded-opentype'), url(../fonts/miso-bold/miso-bold-webfont.woff2) format('woff2'), url(../fonts/miso-bold/miso-bold-webfont.woff) format('woff'), url(../fonts/miso-bold/miso-bold-webfont.ttf) format('truetype'), url(../fonts/miso-bold/miso-bold-webfont.svg#svgFontName) format('svg')
}

@font-face {
    font-family: miso;
    src: url(../fonts/miso-regular/miso-regular-webfont.eot);
    src: url(../fonts/miso-regular/miso-regular-webfont.eot?#iefix) format('embedded-opentype'), url(../fonts/miso-regular/miso-regular-webfont.woff2) format('woff2'), url(../fonts/miso-regular/miso-regular-webfont.woff) format('woff'), url(../fonts/miso-regular/miso-regular-webfont.ttf) format('truetype'), url(../fonts/miso-regular/miso-regular-webfont.svg#svgFontName) format('svg')
}

body,
html {
    width: 100%;
    height: 100%;
    min-height: 100% !important;
    margin: 0;
    padding: 0;
    position: relative;
    -ms-overflow-style: none;
    scrollbar-width: none;
    scroll-behavior: smooth
}

.header {
    position: fixed;
    top: 65px;
    z-index: 1;
    width: 100%
}

.progress-bar {
    height: 3px;
    background: #404040;
    width: 0%
}

#navbar {
    padding-top: 10px;
    padding-bottom: 10px;
    z-index: 1;
    box-shadow: none;
    transition: padding-top .3s ease-in-out, padding-bottom .3s ease-in-out
}

#navbar.navbar-collapse {
    padding-top: 2px;
    padding-bottom: 3px;
    transition: padding-top .3s ease-in-out, padding-bottom .3s ease-in-out
}

.navbar-collapse {
    background-color: #FFF
}

.nav-item {
    display: inline-block;
    font-family: miso, sans-serif;
    color: #222;
    font-size: 1.75em;
    transition: font-size .3s ease-in-out;
    letter-spacing: .0125em;
    padding: 0 10px 0 10px
}

.active-nav-item {
    font-family: miso-bold, sans-serif;
}

#nav-items {
    margin: 0 auto;
    color: #222
}

#title-irminrics {
    color: #222;
    font-size: 1.75em;
    font-family: miso, sans-serif;
    letter-spacing: .0125em;
    padding: 8px 0 8px 0
}

.icon {
    position: relative;
    width: 44px;
    height: 44px;
    margin-right: 8px;
    display: inline-block;
    background-size: cover
}

.irminrics-dp {
    background-image: url(../images/irminrics-dp.png);
    margin-left: 8px;
    float: left
}

.irminrics-link {
    color: #222;
}

.irminrics-link:hover {
    color: #222;
}

::-webkit-scrollbar {
    display: none
}

#intro-background {
    display: table;
    width: 100%;
    height: 1000px;
    background-color: #f4f4f4;
}

#intro-div {
    width: 100%;
    height: 30%;
    margin: auto;
    text-align: center;
    font-size: 20px
}

#main-intro {
    vertical-align: middle;
    display: table-cell
}

.row:after {
    content: "";
    display: table;
    clear: both
}

.column {
    float: left;
    width: 25%
}

.typeText {
    width: 85%;
    text-align: center;
    line-height: 50px;
    height: 70px;
    font-size: 6em;
    top: 0;
    bottom: 0;
    margin: auto;
    margin-bottom: 40px
}

.typeText .content {
    display: inline;
    color: #222;
    font-family: miso, sans-serif
}

.intro-description {
    display: inline-block;
    font-size: 1.5em;
    width: 60%;
    font-family: miso, sans-serif;
    color: #222;
}

ul {
    display: table
}

li {
    display: table-cell;
    position: relative
}

.nav-link {
    color: #222;
}

.nav-link:hover {
    color: #222;
    cursor: pointer
}

.nav-link:after {
    content: "";
    display: block;
    height: 2px;
    left: 50%;
    position: absolute;
    background: #222;
    transition: width .5s ease 0s, left .5s ease 0s;
    width: 0
}

.nav-link:hover:after {
    width: 100%;
    left: 0
}

.white-text {
    color: white;
}

.white-text:after {
    background: white;
}

.black-text {
    color: #222;
}

.black-text:hover {
    color: #222;
}

.center {
    margin: 0 auto;
}

.button {
    font-family: "Roboto";
    font-weight: 500;
    padding: 15px 0 10px 0;
    text-align: center;
    transition: all 0.4s;
    width: fit-content;
    border-bottom: 3px solid #111;
    color: #111;
}

.button:hover {
    color: #222;
    text-decoration: none;
    cursor: pointer;
    border-bottom: 10px solid #111;
}

#projects-div {
    display: block;
    overflow: auto;
    width: 100%;
    padding: 130px 0 70px 0;
    margin: auto;
    text-align: center;
    font-size: 20px
}

#about-div {
    display: block;
    overflow: auto;
    width: 100%;
    padding: 130px 0 70px 0;
    margin: auto;
    text-align: center;
    font-size: 20px
}

#projects-div-header {
    padding: 0;
    width: 100%;
    letter-spacing: 01px;
    font-size: 1.3em;
    font-family: miso, sans-serif;
    margin: 0 auto;
    text-align: left;
}

#projects-div-header::before {
    content: "";
    display: inline-block;
    width: 30px;
    height: 1px;
    background: #555;
    vertical-align: middle;
    margin-right: 10px;
}

.projects-container {
    min-height: 100px;
    overflow: hidden;
    padding-top: 100px;
    padding-bottom: 100px;
}

.container-wrapper {
    width: 80%;
    margin: 0 auto;
    max-width: 1100px;
    height: 100%;
}

.projects-text {
    font-family: miso, sans-serif;
    width: 40%;
    text-align: justify;
    text-justify: inter-word;
    font-size: 1.15em;
    transition: font-size .3s ease-in-out;
}

.section-header {
    font-family: miso-bold, sans-serif;
    font-size: 2.3em;
    letter-spacing: .0125em;
}

.description {
    color: #888;
    padding-top: 10px;
    padding-bottom: 10px;
}

.projects-badge {
    font-family: miso-bold, sans-serif;
    color: white;
    padding: 5px 15px;
    width: fit-content;
    border-radius: 28px;
    margin-right: 10px;
    background-color: #F05138;
}

.projects-button {
    margin-top: 30px;
    font-size: 0.8em;
}

.projects-image {
    width: 50%;
}

.left {
    float: left;
}

.right {
    float: right;
}

.projects-image img {
    padding: 0 25px 0 25px;
    -webkit-animation-delay: 0.25s !important;
    animation-delay: 0.25s !important;
    -webkit-transition: all 0.65s;
    -o-transition: all 0.65s;
    transition: all 0.65s;
}

.projects-image img:hover {
    transform: scale(1.10);
}

.fadeIn {
    opacity: 0;
    visibility: none;
    -webkit-animation-delay: 0.25s !important;
    animation-delay: 0.25s !important;
    -webkit-transition: all 0.65s;
    -o-transition: all 0.65s;
    transition: all 0.65s;
}

.fadeIn.visible {
    opacity: 1;
    transform: none;
    visibility: visible;
}

#contact {
    font-family: miso-bold, sans-serif;
    font-size: 3.35em;
    color: black;
}

#contact:hover {
    color: #888;
}

.footer-div {
    padding-bottom: 28px;
    width: 55%;
}

.footer-header {
    font-family: miso, sans-serif;
    font-size: 1.6em;
}

.footer-text {
    font-family: miso, sans-serif;
    font-size: 1.2em;
}

.social-icons {
    padding-right: 10px;
}

.wallpaper {
    display: table;
    width: 100%;
    height: 350px;
    background: linear-gradient(rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url(../images/city-cars.gif);
    background-size: cover;
    background-attachment: fixed;
    background-position: 0 425%;
}

#about-div {
    display: block;
    overflow: auto;
    width: 100%;
    padding: 130px 0 70px 0;
    margin: auto;
    text-align: center;
}

.description-div {
    padding: 90px 0 70px 0;
    min-height: 100px;
    overflow: hidden;
}

.description-picture {
    padding-right: 100px;
}

.description-text {
    font-family: miso, sans-serif;
    font-size: 1.2em;
    text-align: justify;
    text-justify: inter-word;
}

#about-me-picture {
    padding-top: 10px;
}

.education-div {
    min-height: 100px;
    overflow: hidden;
    padding-top: 60px;
}

.education-text {
    font-family: miso, sans-serif;
    text-align: justify;
    text-justify: inter-word;
    font-size: 1em;
    transition: font-size .3s ease-in-out;
}

.education-icon {
    margin-top: 10px;
    width: 99px;
    height: 99px;
    margin-left: 5px;
    margin-right: 30px;
    /* border-radius */
    -webkit-border-radius: 90px;
    -moz-border-radius: 90px;
    border-radius: 90px;
    /* box-shadow */
    -webkit-box-shadow: rgba(0, 0, 0, 0.8) 0px 0 5px;
    -moz-box-shadow: rgba(0, 0, 0, 0.8) 0 0 5px;
    box-shadow: rgba(0, 0, 0, 0.8) 0 0 5px;
}

.education-content {
    min-height: 100px;
    overflow: hidden;
    padding-top: 20px;
}

.education-description {
    float: left;
}

.about-title {
    margin: 0;
    font-size: 1.4em;
}

.about-content-left {
    width: 55%;
    float: left;
}

.about-content-right {
    width: 45%;
    float: left;
}

.about-badge {
    font-family: miso-bold, sans-serif;
    color: white;
    padding: 5px 15px;
    width: fit-content;
    border-radius: 28px;
    margin-right: 10px;
    background-color: #222;
    float: left;
    font-size: 18px;
}

.section-badge-div {
    min-height: 100px;
    overflow: hidden;
}

.about-badge-div {
    width: 85%;
}

@media only screen and (max-width:682px) {
    #portfolio-nav {
        display: none;
    }
    #contact-nav {
        display: none;
    }
    .typeText {
        font-size: 2.2em;
        margin-bottom: 20px;
    }
    .intro-description {
        font-size: 1.1em;
    }
    .button {
        font-size: 15px;
    }
    .nav-item {
        font-size: 1.5em;
    }
    #title-irminrics {
        font-size: 1.5em;
        line-height: 48px;
    }
    #about-me-picture {
        width: 100%;
        height: 100%;
        object-fit: cover;
        overflow: hidden;
    }
    .description-div {
        padding: 0px;
    }
    .description-picture {
        transform: scale(0.75, 0.75);
        -ms-transform: scale(0.75, 0.75);
        -webkit-transform: scale(0.75, 0.75);
        padding: 0;
    }
    .description-text {
        font-size: 1em;
        padding-top: -50px;
    }
    .section-header {
        font-size: 1.8em;
    }
    .education-icon {
        display: none;
    }
    .about-title {
        font-size: 1.15em;
    }
}

@media only screen and (max-width:770px) {
    #contact {
        font-size: 2.6em;
    }
    .footer-div {
        width: 100%;
        font-size: 0.8em;
    }
}

@media (min-width:682px) and (max-width:870px) {
    .typeText {
        font-size: 3.5em
    }
}

@media (min-width:870px) and (max-width:1100px) {
    .typeText {
        font-size: 5em
    }
}

@media only screen and (max-width:905px) {
    .wallpaper {
        display: none;
    }
    .progress-bar {
        display: block;
    }
}

@media (min-width:682px) and (max-width:905px) {
    .description-picture {
        transform: scale(0.8, 0.8);
        -ms-transform: scale(0.8, 0.8);
        -webkit-transform: scale(0.8, 0.8);
    }
}

@media (min-width:682px) and (max-width:1200px) {
    .description-text {
        padding-top: 60px;
    }
    .description-picture {
        padding: 0;
    }
}

@media only screen and (max-width:1200px) {
    .about-content-left {
        width: 100%;
    }
    .about-content-right {
        width: 100%;
    }
}




/* @media only screen and (max-width:1325px) {
    .projects-container {
        -webkit-box-orient: vertical;
        -webkit-box-direction: reverse;
        -ms-flex-direction: column-reverse;
        flex-direction: column-reverse;
    }
} */

